- Added support for Sun CC (FR #46595 and FR #46513). (David Soria Parra)

- Fixed memory corruptions while reading properties of zip files. (Ilia)
- Fixed memory leak in ob_get_clean/ob_get_flush. (Christian)
- Fixed segfault on invalid session.save_path. (Hannes)
- Fixed leaks in imap when a mail_criteria is used. (Pierre)

- Fixed bug #48307 (stream_copy_to_stream() copies 0 bytes when $source is a 
  socket). (Arnaud)
- Fixed bug #48256 (Crash due to double-linking of history.o).
  (tstarling at wikimedia dot org)
- Fixed bug #48248 (SIGSEGV when access to private property via &__get). 
  (Felipe)
- Fixed bug #48240 (DBA Segmentation fault dba_nextkey). (Felipe)
- Fixed bug #48224 (Incorrect shuffle in array_rand). (Etienne)
- Fixed bug #48221 (memory leak when passing invalid xslt parameter). (Felipe)
- Fixed bug #48206 (Iterating over an invalid data structure
  with RecursiveIteratorIterator leads to a segfault). (Scott)
- Fixed bug #48204 (xmlwriter_open_uri() does not emit warnings on invalid
  paths). (Ilia)
- Fixed bug #48156 (Added support for lcov v1.7). (Ilia)
- Fixed bug #48131 (Don't try to bind ipv4 addresses to ipv6 ips via
  bindto). (Ilia)
- Fixed bug #48132 (configure check for curl ssl support fails with
  --disable-rpath). (Jani)
- Fixed bug #48070 (PDO_OCI: Segfault when using persistent connection).
  (Pierre, Matteo, jarismar dot php at gmail dot com)
- Fixed bug #48058 (Year formatter goes wrong with out-of-int range). (Derick)
- Fixed bug #48038 (odbc_execute changes variables used to form params array).
  (Felipe)
- Fixed bug #47997 (stream_copy_to_stream returns 1 on empty streams). (Arnaud)
- Fixed bug #47991 (SSL streams fail if error stack contains items). (Mikko)
- Fixed bug #47981 (error handler not called regardless). (Hannes)
- Fixed bug #47969 (ezmlm_hash() returns different values depend on OS).
  (Ilia)
- Fixed bug #47946 (ImageConvolution overwrites background). (Ilia)