@@ -19,7 +19,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: streams.c,v 1.82.2.6.2.37 2009/05/16 20:24:01 lbarnaud Exp $ */
+/* $Id: streams.c,v 1.82.2.6.2.38 2009/05/17 14:59:24 lbarnaud Exp $ */
 
 #define _GNU_SOURCE
 #include "php.h"
@@ -1206,12 +1206,12 @@ PHPAPI size_t _php_stream_passthru(php_stream * stream STREAMS_DC TSRMLS_DC)
 		char *p;
 		size_t mapped;
 
-		p = php_stream_mmap_range(stream, php_stream_tell(stream), PHP_STREAM_COPY_ALL, PHP_STREAM_MAP_MODE_SHARED_READONLY, &mapped);
+		p = php_stream_mmap_range(stream, php_stream_tell(stream), PHP_STREAM_MMAP_ALL, PHP_STREAM_MAP_MODE_SHARED_READONLY, &mapped);
 
 		if (p) {
 			PHPWRITE(p, mapped);
 
-			php_stream_mmap_unmap(stream);
+			php_stream_mmap_unmap_ex(stream, mapped);
 
 			return mapped;
 		}
@@ -1331,7 +1331,7 @@ PHPAPI size_t _php_stream_copy_to_stream_ex(php_stream *src, php_stream *dest, s
 		if (p) {
 			mapped = php_stream_write(dest, p, mapped);
 
-			php_stream_mmap_unmap(src);
+			php_stream_mmap_unmap_ex(src, mapped);
 
 			*len = mapped;
 			
